# vecbit

./: .gitignore  Cargo.toml  Makefile  README  README.md
_design/: vecbit.afdesign
src/: api.rs  app.rs  auth.rs  bits.rs  config.rs  db.rs  error.rs  init.rs  lib.rs  main.rs  model.rs  responder.rs  route.rs  ui.rs  vecbit.rs
src/controller/: api.rs  ui.rs
web/static/assets/: global.css
web/templates/email/: magic_link.html
web/templates/layouts/: default.html  default_no_wrap.html  default_split.html
web/templates/site/: edit.html  index.html  signup.html  start.html  user.html
web/templates/snippets/: bool_editor.html  bools.html
