[package]
name = "status"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-service = "2.0.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.4.1"
aes-gcm = "0.10.3"
argon2 = "0.5.2"
base64 = "0.22.0"
bitvec = "1.0.1"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
mail-builder = "0.3.1"
mail-send = "0.4.7"
r2d2 = "0.8"
r2d2_sqlite = "0.22.0"
rand = "0.8.5"
rusqlite = { version = "0.29", features = ["time"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
syntect = "5.2.0"
tera = "1.19.1"
thiserror = "1.0.59"
time = { version = "0.3.36", features = ["serde"] }
uuid = "1.6.1"
